--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 			
 		</div>		
 	</div>-->
-	<div id="slides">
+	<section id="slides">
 	    <div class="slides-container">
 	      <img src="img/1.jpg" width="1024" height="685 alt="load">
 	      <img src="img/12.jpg" width="1024" height="685 alt="load1">
@@ -59,7 +59,22 @@
 	      <img src="img/123456.jpg" width="1024" height="685" alt="kamaz2">
 	      <img src="img/1234567.jpg" width="1024" height="685" alt="mine">
 	    </div>
-
+		<div class="banner text-center dark" id="bannertext">
+			<h1 class="banner-text white_text">Мне срочно нужен САМОСВАЛ!</h1>
+			<form class="form-inline" role="form">
+				<div class="form-group">
+					<label for="name">Вас зовут:</label>
+					<input type="text" class="form-control" id="name">
+				</div>
+				<div class="form-group">
+					<label for="tel">Телефон:</label>
+					<input type="tel" class="form-control" id="tel" placeholder="099 123 4567">
+				</div>
+				<button type="submit" class="btn btn-success btn-lg">Перезвонить</button>
+			</form> 
+			<hr class="align_center ">
+			<h3 class="white_text">Укажите Ваши контактные данные и мы свяжемся в ближайшее время</h3> 
+		</div>
 	    <nav class="slides-navigation">
 	      <a href="#" class="next">
 			<span class="glyphicon glyphicon-chevron-right"></span>
@@ -68,28 +83,187 @@
 	      	<span class="glyphicon glyphicon-chevron-left"></span>
 	      </a>
 	    </nav>
-  </div>
-  <div class="baner text-center" style="bottom:300px;">
-  	<h1>Мне срочно нужен САМОСВАЛ!</h1>
-	  	<form class="form-inline" role="form">
-		  <div class="form-group">
-		    <label for="name">Вас зовут:</label>
-		    <input type="text" class="form-control" id="name">
-		  </div>
-		  <div class="form-group">
-		    <label for="tel">Телефон:</label>
-		    <input type="tel" class="form-control" id="tel" placeholder="099 123 4567">
-		  </div>
-		  <button type="submit" class="btn btn-success">Перезвонить</button>
-	</form>  
-</div>
-  <script src="js/jquery.easing.1.3.js"></script>
-  <script src="js/jquery.animate-enhanced.min.js"></script>
-  <script src="js/jquery.superslides.js" type="text/javascript" charset="utf-8"></script>
+  	</section>
+  	
+	<div class="container">
+		<div class="row jumbotron">
+			<div class="col-md-12 text">	
+				<hr class="align_center">
+				<p>Привет, если Вы читаете этот текст, значит в данный момент вы в поиске автотранспорта, который сможет решить Вашу задачу. У нас Вы сможете заказать доставку самосвалом по Харькову и области. Также осуществляем доставку песка, щебня, керамогранита по договоренности.</p>
+				<p>В качестве транспорта мы используем КАМАЗ 55111&nbsp;самосвал, грузоподъемностью 13т и объемом платформы в 6 м3.Если вам необходимо доставить груз самосвалом, доставить песок, щебень, кирпич и прочее, вывезти строительный мусор смело обращайтесь к нам, мы решим вашу проблему оперативно и в заданный срок.</p>
+				<p> Для Вашего удобства на сайте представлена форма расчета
+		        &nbsp;приблизительной стоимости наших услуг, просчет производится по факту выполненных работ.</p>
+		        <hr class="aligncenter ">
+		        <div class="text-center">
+					<button type="submit" class="btn btn-lg btn-success mar10 ">Связаться</button>
+					<button type="submit" class="btn btn-lg btn-warning mar10 ">Расчитать стоимость</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="container-fluid">
+		<div class="row">
+			<img src="img/12345678.jpg" alt="mine landscape" style="width:100%; height:250px;">
+		</div>
+	</div>
+	<div class="container delivery">
+		<div class="row text-center">
+			<div class="col-md-3  boxy">
+				<img src="img/sand.jpg" alt="sand" class="img-responsive">
+				<h3>Доставка песка</h3>
+				<p>У нас можно заказать карьерный песок с Безлюдовского карьера</p>
+				<a href="#">Подробнее</a>		
+			</div>
+			<div class="col-md-3  boxy">
+				<img src="img/gravel.jpg" alt="gravel" class="img-responsive">
+				<h3>Доставка щебня</h3>
+				<p>Вы можете заказать с доставкой для вашей стройки</p>
+				<a href="#">Подробнее</a>
+			</div>
+			<div class="col-md-3  boxy">
+				<img src="img/brick.jpg" alt="brick" class="img-responsive">
+				<h3>Доставка кирпича</h3>
+				<p>Нужен силикатный кирпич? Или другой материал для стен?</p>
+				<a href="#">Подробнее</a>
+			</div>
+			<div class="col-md-3  boxy">
+				<img src="img/garbage.jpg" alt="garbage" class="img-responsive">
+				<h3>Вывоз мусора</h3>
+				<p>Пора вывозить строительный мусор? Не проблема!</p>
+				<a href="#">Подробнее</a>
+			</div>
+		</div>
+	</div>
+	<div class="container advantage ">
+		<hr class="aligncenter gray_bg">
+		<h1 class="text-center">Преимущества в работе с нами:</h1>
+		<hr class="aligncenter gray_bg" width="30%">
+			<div class="row">
+				<div class="col-md-4">
+					<hr class="aligncenter orange" width="30%">
+					<hr class="aligncenter orange" width="50%">
+					<hr class="aligncenter orange" width="30%">
+				</div>	
+				<div class="col-md-4">
+					<ul>
+						<li>Пунктуальность. Мы доставляем груз вовремя</li>
+						<li>100% выполнение договоренностей. Мы не дадим заднюю посреди заказа</li>
+						<li>Адекватные расценки. Предварительный расчет перед заказом  отличается от конечной стоимости в пределах 25%.</li>
+					</ul>
+				</div>
+				<div class="col-md-4">
+					<hr class="aligncenter orange" width="30%">
+					<hr class="aligncenter orange" width="50%">
+					<hr class="aligncenter orange" width="30%">
+				</div>
+			</div>	
+	</div>
+	<div class="container-fluid">
+		<div class="row" id="lanscape">
+			<img src="img/landscape.jpg" alt="mine landscape" style="width:100%; height:410px;">
+		</div>
+	</div>
+	<div class="container">
+		<h1 class="text-center">Наши клиенты</h1>
+		<div class="row">
+			<div class="col-md-6 ">
+				<img src="img/client.jpg" alt="" class="imgborder">
+				<h3 class="dbi mar10">Lorem ipsum, "Рога и Копыта"</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+			</div>
+			<div class="col-md-6">
+				<img src="img/client1.jpg" alt="" class="imgborder">
+				<h3 class="dbi mar10">Lorem ipsum, "Рога и Копыта"</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<img src="img/client2.jpg" alt="" class="imgborder">
+				<h3 class="dbi mar10">Lorem ipsum, "Рога и Копыта"</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+			</div>
+			<div class="col-md-6">
+				<img src="img/client3.jpg" alt="" class="imgborder">
+				<h3 class="dbi mar10">Lorem ipsum, "Рога и Копыта"</h3>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
+			</div>
+		</div>
+	</div>
+<!--	<div class="container pad20 ">	
+		<div class="row text-center ">
+			<hr class="align_center">
+			<h3>Мы доставим</h3>
+			<hr class="align_center">
+			<div class="col-md-3 boxy 
+			">
+				<img src="img/sand.jpg" alt="sand" class="img-responsive height-200">
+				<h3>Доставим песок</h3>
+				<p>У нас можно заказать карьерный песок с Безлюдовского карьера...</p>
+				<a href="#">Подробнее</a>
+			</div>
+			<div class="col-md-3 boxy 
+			">
+				<img src="img/gravel.jpg" alt="gravel" class="img-responsive height-200">
+				<h3>Доставим щебень</h3>
+				<p>Вы можете заказать с доставкой для вашей стройки...</p>
+				<a href="#">Подробнее</a>
+			</div>
+			<div class="col-md-3 boxy 
+			">
+				<img src="img/brick.jpg" alt="brick" class="img-responsive height-200">
+				<h3>Доставим кирпич</h3>
+				<p>Нужен силикатный кирпич? Или другой материал для стен?</p>
+				<a href="#">Подробнее</a>
+			</div>
+			<div class="col-md-3 boxy 
+			">
+				<img src="img/construction_garbage.jpg" alt="garbage" class="img-responsive height-200">
+				<h3>Вывезем мусор</h3>
+				<p>Пора вывозить строительный мусор? Не проблема!</p>
+				<a href="#">Подробнее</a>
+			</div>
+		</div>
+	</div>-->
+
+  	<script src="js/jquery.easing.1.3.js"></script>
+  	<script src="js/jquery.animate-enhanced.min.js"></script>
+  	<script src="js/jquery.superslides.js" type="text/javascript" charset="utf-8"></script>
 	<script>
-	   $('#slides').superslides({
+	  $('#slides').superslides({
 	     animation: 'fade'
-	   });
+	   }); 
 	</script>
+	<script>
+    	// Banner text add parallax efect and fade
+		function EasyPeasyParallax() {
+		    scrollPos = $(this).scrollTop();
+		    $('#slider').css({
+		        'background-position': '50% ' + (-scrollPos / 4) + "px",
+		        
+		    });
+		    $('#bannertext').css({
+		        'margin-top': (scrollPos / 4) + "px",
+		        'opacity': 1 - (scrollPos / 300),
+		        
+
+		    });
+		}
+		$(document).ready(function () {
+		    $(window).scroll(function () {
+		        EasyPeasyParallax();
+		    });
+		});
+    </script>
+    <script>
+	    $( document ).click(function() {
+	  		$( "#lanscape" ).toggle( "slide");
+	  	});
+	</script>  		
 </body>
 </html>
