--- a/index.html
+++ b/index.html
@@ -169,13 +169,13 @@
 		<div class="row">
 			<div class="col-md-6 ">
 				<img src="img/client.jpg" alt="" class="imgborder">
-				<h3 class="dbi mar10">Lorem ipsum, "Рога и Копыта"</h3>
+				<h3 class="dbi mar10">Lorem ipsum, <em>"Рога и Копыта"</em></h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 			</div>
 			<div class="col-md-6">
 				<img src="img/client1.jpg" alt="" class="imgborder">
-				<h3 class="dbi mar10">Lorem ipsum, "Рога и Копыта"</h3>
+				<h3 class="dbi mar10">Lorem ipsum, <em>"Рога и Копыта"</em> </h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 			</div>
@@ -183,19 +183,30 @@
 		<div class="row">
 			<div class="col-md-6">
 				<img src="img/client2.jpg" alt="" class="imgborder">
-				<h3 class="dbi mar10">Lorem ipsum, "Рога и Копыта"</h3>
+				<h3 class="dbi mar10">Lorem ipsum, <em>"Рога и Копыта"</em></h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 			</div>
 			<div class="col-md-6">
 				<img src="img/client3.jpg" alt="" class="imgborder">
-				<h3 class="dbi mar10">Lorem ipsum, "Рога и Копыта"</h3>
+				<h3 class="dbi mar10">Lorem ipsum, <em>"Рога и Копыта"</em></h3>
 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</p>
 			</div>
 		</div>
 	</div>
-<!--	<div class="container pad20 ">	
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4 col-xs-12">
+				<img src="img/logo.jpg" alt="logo">
+			</div>
+			<div class="col-md-4 col-xs-12">
+				<div class="social"></div>
+			</div>
+			<div class="col-md-4 col-xs-12"></div>
+		</div>
+	</div>
+	<!--<div class="container pad20 ">	
 		<div class="row text-center ">
 			<hr class="align_center">
 			<h3>Мы доставим</h3>
