--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 	      <img src="img/123456.jpg" width="1024" height="685" alt="kamaz2">
 	      <img src="img/1234567.jpg" width="1024" height="685" alt="mine">
 	    </div>
-		<div class="banner text-center dark" id="bannertext">
+		<div class="container banner text-center dark" id="bannertext">
 			<h1 class="banner-text white_text">Мне срочно нужен САМОСВАЛ!</h1>
 			<form class="form-inline" role="form">
 				<div class="form-group">
@@ -195,15 +195,23 @@
 			</div>
 		</div>
 	</div>
-	<div class="container">
-		<div class="row">
-			<div class="col-md-4 col-xs-12">
-				<img src="img/logo.jpg" alt="logo">
+			<!--footer -->
+	<div class="container-fluid footer-bg">
+		<div class="container ">
+			<div class="row">
+					<div class="col-md-4 col-xs-12">
+						<img src="img/logo.jpg" alt="logo">
+					</div>
+					<div class="col-md-4 col-xs-12">
+						<div class="social">
+							<img src="img/fbook.jpg" alt="fb" class="img-responsive dbi social-icon">
+							<img src="img/vk.jpg" alt="vk" class="img-responsive dbi social-icon">
+							<img src="img/instagram.jpg" alt="instagram" class="img-responsive dbi social-icon">
+							<img src="img/google.jpg" alt="googleplus" class="img-responsive dbi social-icon">
+						</div>
+					</div>
+				<div class="col-md-4 col-xs-12"></div>
 			</div>
-			<div class="col-md-4 col-xs-12">
-				<div class="social"></div>
-			</div>
-			<div class="col-md-4 col-xs-12"></div>
 		</div>
 	</div>
 	<!--<div class="container pad20 ">	
